Fix logos visibility

--- a/content/themes/dude/sass/layout/_hero-service.scss
+++ b/content/themes/dude/sass/layout/_hero-service.scss
@@ -49,6 +49,7 @@
 
     li {
       display: inline-block;
+      opacity: 1;
     }
 
     > * {
